# Group3-Socialrobot

./: README.md
socialrobot_actionlib/: .gitignore  CMakeLists.txt  README.md  package.xml
socialrobot_actionlib/config/: action.rdf  action_library.pddl
socialrobot_actionlib/example/: testDecodeAction.py  testRequestActionInfo.py  testRequestActionList.py  testRequestDomainInfo.py
socialrobot_actionlib/msg/: Action.msg  ActionSequence.msg  Condition.msg  Formula.msg  Predicate.msg  Problem.msg
socialrobot_actionlib/res/: demo.ui
socialrobot_actionlib/scripts/: action.py  actionlib_node.py  domain_parser.py
socialrobot_actionlib/srv/: CheckAction.srv  GetActionInfo.srv  GetActionList.srv  GetDomain.srv  GetPrimitiveActionList.srv
socialrobot_hardware/: CMakeLists.txt  README.md  package.xml
socialrobot_hardware/action/: FollowPathTrajectory.action
socialrobot_hardware/config/: jointremap.yaml
socialrobot_hardware/example/: arm_controller_client.py  arm_controller_server.py  path_follow.py
socialrobot_hardware/launch/: hardware_interface.launch  robot.launch  sim.launch
socialrobot_hardware/msg/: Affordance.msg  Object.msg  ObjectInfo.msg  RobotState.msg  VrepState.msg
socialrobot_hardware/scripts/: coppelia_interface_async.py  coppelia_interface_sync.py  hw_interface.py  path_follower.py  sim.py  vrep_interface.py  vrep_interface_async.py
socialrobot_hardware/scripts/interfaces/: interface.py  skkurobot.py  social_robot.py
socialrobot_hardware/src/: interface_controller.cpp  interface_controller.h  vrep_interface.cpp
socialrobot_hardware/srv/: SetPathTrajectory.srv  VrepGetObstacles.srv  VrepGetSimState.srv  VrepSetJointTrajectory.srv  VrepSetSimState.srv
socialrobot_interface/: CMakeLists.txt  README.md  package.xml
socialrobot_interface/action/: System.action
socialrobot_interface/example/: ActionViewer.py  testContext.py  testDemo.py  testGetObjects.py  testGetStates.py  testRequestActions.py  testRequestPlan.py  testRequestProblem.py  testRequestTask.py  testSetGoalPredicate.py
socialrobot_interface/launch/: bringup.launch  db.launch  demo.launch  init.launch  init_robot.launch  init_sim.launch  init_vision.launch  interface_manager.launch  state_machine.launch
socialrobot_interface/msg/: ActionLibrary.msg
socialrobot_interface/script/: actionlibrary.py  behavior.py  interface.py  interface_node.py  knowledge.py  perception.py  state_machine.py  task.py
socialrobot_interface/srv/: Actionlib.srv  Behavior.srv  Knowledge.srv  MetricReasoner.srv  Perception.srv  SetGoalPredicate.srv  System.srv  Task.srv
socialrobot_knowledge/socialrobot_actionlib/: .gitignore  CMakeLists.txt  README.md  package.xml
socialrobot_knowledge/socialrobot_actionlib/config/: action.rdf  actions.yaml  actions_dualarm.yaml  pddl.rdf
socialrobot_knowledge/socialrobot_actionlib/example/: testDecodeAction.py  testRequestActionInfo.py  testRequestActionList.py  testRequestDomainInfo.py
socialrobot_knowledge/socialrobot_actionlib/launch/: actionlib.launch
socialrobot_knowledge/socialrobot_actionlib/msg/: Action.msg
socialrobot_knowledge/socialrobot_actionlib/scripts/: action_reader.py  actionlib_node.py
socialrobot_knowledge/socialrobot_actionlib/srv/: GetActionInfo.srv  GetActionList.srv  GetPrimitiveActionList.srv
socialrobot_knowledge/socialrobot_behavior/: CMakeLists.txt  README.md  package.xml
socialrobot_knowledge/socialrobot_behavior/msg/: PlannerInputs.msg
socialrobot_knowledge/socialrobot_behavior/script/: behavior_node.py
socialrobot_knowledge/socialrobot_motion/mobile_manipulator_motion_planner/: CMakeLists.txt  README.md  package.xml  path_result_ex1.txt  path_result_table_ex1.txt
socialrobot_knowledge/socialrobot_task/socialrobot_task/: CMakeLists.txt  package.xml
socialrobot_knowledge/socialrobot_task/socialrobot_task_msgs/: CMakeLists.txt  package.xml
socialrobot_knowledge/socialrobot_task/socialrobot_task_planner/: CMakeLists.txt  package.xml
socialrobot_motion/: .gitignore  CMakeLists.txt  README.md  package.xml
socialrobot_motion/example/: add_mesh_test.py  attach_example.py  example_get_scene_objects.py  example_update_scene_objects.py  grasp_example.py  movearm_example.py  moveit_cartesian_path.py  moveit_command.py  moveit_test.py  single_arm_plan_test.py
socialrobot_motion/launch/: motion_plan.launch  planner.launch
socialrobot_motion/mesh/graspit/: box.wrl  box.xml  box_backup.wrl
socialrobot_motion/mesh/moveit/: obj_chair.stl  obj_fridge.stl  obj_fridge_bottom_door.stl  obj_tray.stl  (+1 more)
socialrobot_motion/script/: arm_planner.py  grasp_example.py  grasp_planner.py  motionplan_node.py  push_pull_plan.py  single_arm_planner.py
socialrobot_motion/src/: euler2quat.py  grasp.cpp  grasp.h  gripper_openclose.cpp  gripper_openclose.h  motion.h  motionplan_node.cpp  movearm.cpp  movearm.h  movearm_node.cpp  planner_node.cpp
socialrobot_motion/srv/: ArmPlanning.srv  MotionPlan.srv
socialrobot_msgs/: CMakeLists.txt  README.md  package.xml
socialrobot_msgs/msg/: Affordance.msg  Behavior.msg  Group.msg  Object.msg  Position.msg
socialrobot_msgs/srv/: GetGroups.srv  GetObjects.srv  SetGoalPredicates.srv  SetTask.srv  UpdateObjects.srv
socialrobot_perception/qr_tracker/: CMakeLists.txt  package.xml
socialrobot_perception/socialrobot_perception/: CMakeLists.txt  package.xml
socialrobot_perception/socialrobot_perception_msgs/: CMakeLists.txt  package.xml
socialrobot_perception/vision_calibrator/: CMakeLists.txt  README.md  package.xml
socialrobot_reasoner/socialrobot_reasoner/: CMakeLists.txt  package.xml
socialrobot_task/: .gitignore  CMakeLists.txt  README.md  package.xml
socialrobot_task/example/: ActionViewer.py  load_problem.py  testGetActionSeq.py  testProblemGeneration.py
socialrobot_task/launch/: planning_system.launch  task_plan.launch
socialrobot_task/resource/: action_viewer.ui  ui2py.bash
socialrobot_task/script/: DomainGenerator.py  FastDownwardPlanner.py  ProblemGenerator.py  TaskPlanner.py  task_planner_node.py
socialrobot_task/srv/: Dispatch.srv  GetActionSeq.srv  SetProblem.srv
(+488 files in other folders)
