<?xml version="1.0"?>
<package format="2">
  <name>socialrobot_msgs</name>
  <version>1.0.0</version>
  <description>
    Messages and services for socialrobot
  </description>
  <license>Apache 2.0</license>
  <author email="todo@mail.com">author</author>
  <maintainer email="todo@mail.com">maintainer</maintainer>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>std_msgs</depend>
  <build_depend>message_generation</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>vision_msgs</build_depend>
  <build_depend>shape_msgs</build_depend>
  <build_depend>diagnostic_msgs</build_depend>
  <build_depend>socialrobot_actionlib</build_depend>
  <build_export_depend>message_runtime</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>vision_msgs</build_export_depend>
  <build_export_depend>shape_msgs</build_export_depend>
  <build_export_depend>diagnostic_msgs</build_export_depend>
  <build_export_depend>socialrobot_actionlib</build_export_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>vision_msgs</exec_depend>
  <exec_depend>shape_msgs</exec_depend>
  <exec_depend>diagnostic_msgs</exec_depend>
  <exec_depend>socialrobot_actionlib</exec_depend>
</package>
