<?xml version="1.0"?>
<package>
	<name>socialrobot_perception</name>
	<version>0.0.0</version>
	<description>The socialrobot_perception metapackage</description>
	<maintainer email="nicky707@hanmail.net">JJM</maintainer>
	<license>BSD</license>

	<buildtool_depend>catkin</buildtool_depend>

	<export>
		<metapackage/>
	</export>

</package>

