<?xml version="1.0"?>
<package format="2">
  <name>socialrobot_reasoner</name>
  <version>0.0.0</version>
  <description>The socialrobot_reasoner metapackage</description>

  <maintainer email="jjm@todo.todo">jjm</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
	<metapackage/>
  </export>
</package>
